Fix menu alignment and styling

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -27,7 +27,10 @@
     position: absolute;
     z-index: 4;
     top: 100%;
-    right: 0;
+    left: 50%; // moves the left edge of the menu to the center of the button
+    transform: translateX(
+      -50%
+    ); // shifts the menu to the left by half of its width
     flex-direction: column;
     gap: 10px;
     padding: 15px;
@@ -76,10 +79,15 @@
   }
 
   .menu {
+    position: absolute;
     list-style-type: none;
     margin: 0;
     padding: 0;
+    top: 100%;
+    right: 0;
     width: 200px;
+    max-height: 400px;
+    overflow-y: auto;
     background-color: #f1f1f1;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -102,6 +110,7 @@
     .menu-item {
       text-decoration: none;
       color: #333;
+      height: auto;
 
       &:hover {
         color: #007bff;
